# openenv-email-triage

./: Dockerfile  README.md  app.py  email_triage.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt
scripts/: validate-submission.sh
server/: app.py
